fixed big picture size and alignet disigners block by section

--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@
     display: none;
 }
 
+.upper-text {
+    text-transform: uppercase;
+  }
+
 * {
     margin: 0;
     padding: 0;
@@ -32,6 +36,9 @@ section {
     height: 100vh;
     min-height: 600px;
     max-height: 1200px;
+    display: flex;
+    align-items: center;
+    /* background-color: darkcyan; */
 }
 
 h2 {
@@ -181,7 +188,8 @@ blockquote {
     right: 26%;
     top: 50%;
     transform: rotate(-90deg) translateY(-50%);
-    margin-top: -34%;
+    margin-top: -315px;
+    z-index: 1;
 }
 
 .designers {
@@ -197,6 +205,7 @@ blockquote {
     padding-top: 6.5%;
     flex-shrink: 0;
     width: 300px;
+    flex-shrink: 0;
 }
 
 .designer-part-big {
@@ -214,15 +223,15 @@ blockquote {
     margin-right: 0;
 }
 
-.designer-part-big img {
-    height: 540px;
-}
-
 .designer-part img{
     width: 100%;
     height: 440px;
     object-fit: cover;
     margin-bottom: 20px;
+}
+
+.designer-part-big img{
+    height: 540px;
 }
 
 .designer-part-big .designer-about {
